Work table design and checkbox

--- a/table.html
+++ b/table.html
@@ -279,6 +279,35 @@
             });// DOM Ready
         </script>
 
+    <section id="sazzad">
+        <div class="waper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="reservation_search">
+                            <h3>Find your table for any occasion</h3>
+                            <form action="#" class="d-lg-flex justify-content-between d-block">
+                              <div class="form-group">
+                                <input type="text" class="form-control ct_form_control" id="date" name="date" placeholder="Date">
+                              </div>
+                              <div class="form-group">
+                                <input type="text" class="form-control ct_form_control" id="time" name="time" placeholder="Time">
+                              </div>
+                              <div class="form-group">
+                                <input type="text" class="form-control ct_form_control" id="people" name="people" placeholder="People">
+                              </div>
+                              <div class="form-group">
+                                <input type="text" class="form-control ct_form_control" id="area" name="area" placeholder="Area....">
+                              </div>
+                              <button type="submit" class="btn btn-primary">Let's Go</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="table">
         <div class="container">
             <div class="row">
