--- a/module.html
+++ b/module.html
@@ -542,7 +542,7 @@
 <!-- <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="accordion" id="accordionExample">
+            <div class="accordion gt_accordion" id="accordionExample">
               <div class="card">
                 <div class="card-header collapsed" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   Collapsible Group Item #1
