--- a/index-four.html
+++ b/index-four.html
@@ -220,7 +220,11 @@
                 <i class="fa fa-times" aria-hidden="true"></i>
             </a>
             <div class="menu">
-                <ul>
+                <div class="menu-logo">
+                    <img class="img-fluid" src="img/logo.png" alt="logo">
+                </div>
+
+                <ul class="mt-4">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="#">Services</a></li>
