--- a/slider.html
+++ b/slider.html
@@ -11,10 +11,18 @@
 
     <!--
       ==============================
+        Load Google Fonts
+      ==============================
+    -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+
+    <!--
+      ==============================
         Load Main Stylesheet File
       ==============================
     -->
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/plugins.css">
+    <link rel="stylesheet" href="css/style.css">     
 
     <!--
       ==========================
