create index eight

--- a/index-eight.html
+++ b/index-eight.html
@@ -259,7 +259,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="gt_slider_nav">
+            <div class="gt_slider_nav gt_slider_nav_center">
                 <div class="vertical_menu_title">
                     <h4 class="m-0">All Departmentss</h4>
                 </div>
