--- a/index-four-2.html
+++ b/index-four-2.html
@@ -182,7 +182,7 @@
                 <div class="col-md-12">
                     <nav>
                         <div id="gs-maga-menu" class="stellarnav">
-                            <div class="logo" style="right:0">
+                            <div class="logo" style="right:15px; left:initial;">
                                 <a href="index.html">
                                     <img src="img/logo.png" alt="login">
                                 </a>
